--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,2 +1,10 @@
 @import './utils/normalize';
 @import './base/fonts';
+
+@import './utils/variables';
+@import './utils/mixins';
+@import './base/common';
+@import './base/container';
+
+@import './components/burger-menu';
+@import './layots/header';
