--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -1,8 +1,8 @@
 .mobile-menu {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: 337px;
   height: 100%;
   z-index: 900;
   opacity: 0;
@@ -26,13 +26,13 @@
 }
 
 .mobile-menu .content {
-  padding: 48px 40px;
+  padding: 118px 40px;
   height: 100%;
   width: 100%;
   text-align: center;
 
   background-color: $primary-light-colour;
-  transform: translateX(-100%);
+  transform: translateX(100%);
   transition: transform 250ms linear 250ms;
 
   @include for-size(tablet) {
@@ -50,8 +50,8 @@
 
 .burger-menu__btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 48px;
+  right: 31px;
   width: 40px;
   height: 40px;
   z-index: 999;
