--- a/sass/layots/_header.scss
+++ b/sass/layots/_header.scss
@@ -1,3 +1,9 @@
+.header__logo {
+  position: absolute;
+  top: 40px;
+  left: 31px;
+}
+
 .header__nav-item {
   text-align: start;
 
@@ -75,8 +81,9 @@
 }
 
 .header__social-block {
-  display: flex;
   margin-top: 64px;
+
+  display: flex;
 }
 
 .header__social-link {
