--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -1,5 +1,58 @@
 .hero {
-  background-image: url('../../images/hero/hero-1-480.jpg');
-  height: 580px;
-  padding: 280px 31px 183px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(
+      to top,
+      rgba(25, 28, 38, 0.2),
+      rgba(25, 28, 38, 0.2)
+    ),
+    url('../../images/hero/hero-3-480.jpg');
+  background-color: rgba(25, 28, 38, 0.2);
+  background-position: center;
+  background-size: cover;
+  padding: 208px 31px 183px;
+}
+
+.hero__title-block {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.hero__main-title {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: $grey-colour;
+}
+
+.hero__title--span {
+  margin-right: 20px;
+
+  display: block;
+  width: 60px;
+  height: 1px;
+  border-bottom: 1px solid $grey-colour;
+}
+
+.hero__title {
+  margin-bottom: 20px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: $primary-light-colour;
+}
+
+.hero__text {
+  max-width: 306px;
+  display: block;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.02em;
+  color: $secondary-light-colour;
 }
