--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -8,7 +8,7 @@
     url('../../images/hero/hero-3-480.jpg');
   background-color: rgba(25, 28, 38, 0.2);
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   padding: 208px 31px 183px;
 }
 
@@ -33,7 +33,8 @@
   display: block;
   width: 60px;
   height: 1px;
-  border-bottom: 1px solid $grey-colour;
+
+  background-color: $grey-colour;
 }
 
 .hero__title {
