--- a/sass/components/_dark-button.scss
+++ b/sass/components/_dark-button.scss
@@ -1,28 +1,23 @@
 .button--dark {
-  padding: 12px 37px;
+  padding: 12px 20px;
 
+  display: inline-block;
   text-align: center;
 
   border: 1px solid $accent-colour;
   box-sizing: border-box;
   border-radius: 25px;
 
-  & > a {
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.09em;
-    text-transform: uppercase;
-    color: $primary-dark-colour;
-  }
-
-  &:hover > a,
-  &:focus > a {
-    color: $primary-light-colour;
-  }
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: $primary-light-colour;
 
   &:hover,
   &:focus {
+    color: $primary-light-colour;
     background-color: $accent-colour;
   }
 }
