--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,10 +8,13 @@
 
 @import './components/light-button';
 @import './components/dark-button';
+@import './components/titles';
 
 @import './components/burger-menu';
+
 @import './layots/header';
 @import './layots/hero';
 @import './layots/about-us';
 @import './layots/prices';
 @import './layots/statistic';
+@import './layots/masters';
