--- a/css/index.css
+++ b/css/index.css
@@ -494,6 +494,81 @@ img {
   background-color: #ff6c00;
 }
 
+.title-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title__span--light {
+  width: 60px;
+  height: 1px;
+  margin-right: 20px;
+  display: block;
+  background-color: #303030;
+}
+
+.title__span--dark {
+  width: 60px;
+  height: 1px;
+  margin-right: 20px;
+  display: block;
+  background-color: rgba(157, 164, 189, 0.6);
+}
+
+.title--light {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #303030;
+}
+
+.title--dark {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: rgba(157, 164, 189, 0.6);
+}
+
+.info__title {
+  margin-top: 20px;
+  max-width: 330px;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  letter-spacing: 0.05em;
+  color: #303030;
+}
+
+.statistic__title {
+  margin-top: 20px;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16;
+  letter-spacing: 0.05em;
+  color: #303030;
+}
+
+.prices__title {
+  margin-top: 20px;
+  text-align: start;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+}
+
 .mobile-menu {
   position: fixed;
   top: 0;
@@ -765,43 +840,6 @@ img {
   padding: 84px 31px;
 }
 
-.info__title-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.info__title--span {
-  width: 60px;
-  height: 1px;
-  margin-right: 20px;
-  display: block;
-  background-color: #303030;
-}
-
-.info__main-title {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  color: #303030;
-}
-
-.info__title {
-  margin-top: 20px;
-  max-width: 330px;
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 1.18;
-  letter-spacing: 0.05em;
-  color: #303030;
-}
-
 .info__text {
   margin-top: 20px;
   font-weight: 400;
@@ -824,43 +862,6 @@ img {
   background-position: center;
   background-size: cover;
   padding: 84px 0px 84px;
-}
-
-.prices__title-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.prices__title--span {
-  width: 60px;
-  height: 1px;
-  margin-right: 20px;
-  display: block;
-  background-color: rgba(157, 164, 189, 0.6);
-}
-
-.prices__main-title {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  color: rgba(157, 164, 189, 0.6);
-}
-
-.prices__title {
-  margin-top: 20px;
-  text-align: start;
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.17;
-  letter-spacing: 0.05em;
-  color: #ffffff;
 }
 
 .prices__list {
@@ -916,42 +917,6 @@ img {
 
 .statistic {
   padding: 84px 31px;
-}
-
-.statistic__title-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.statistic__title--span {
-  width: 60px;
-  height: 1px;
-  margin-right: 20px;
-  display: block;
-  background-color: #303030;
-}
-
-.statistic__main-title {
-  font-weight: 600;
-  font-size: 11px;
-  line-height: 1.36;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  color: #303030;
-}
-
-.statistic__title {
-  margin-top: 20px;
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 1.16;
-  letter-spacing: 0.05em;
-  color: #303030;
 }
 
 .statistic__text {
@@ -1012,5 +977,9 @@ img {
   line-height: 1.36;
   text-align: center;
   color: #303030;
+}
+
+.masters {
+  background-color: #f7f7f7;
 }
 /*# sourceMappingURL=index.css.map */
