--- a/sass/index.scss
+++ b/sass/index.scss
@@ -19,3 +19,7 @@
 @import './layots/statistic';
 @import './layots/masters';
 @import './layots/portfolio';
+
+@import './components/form';
+
+@import './layots/footer';
