--- a/css/index.css
+++ b/css/index.css
@@ -1070,4 +1070,167 @@ img {
 .portfolio__image:not(:last-child) {
   margin-bottom: 30px;
 }
+
+.form-container {
+  padding: 84px 31px;
+}
+
+.form-title {
+  margin-bottom: 44px;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #ffffff;
+}
+
+.form-input {
+  width: 100%;
+  margin-bottom: 44px;
+  padding-bottom: 8px;
+  background-color: #191c26;
+  border: none;
+  border-bottom: 1px solid rgba(157, 164, 189, 0.6);
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.form-input:focus-within, .form-input:focus-visible {
+  outline: 0;
+  border: none;
+  border-bottom: 1px solid #ffffff;
+}
+
+.form-input:nth-last-child(2) {
+  padding-bottom: 60px;
+}
+
+.footer {
+  background-color: #191c26;
+  text-align: center;
+}
+
+.footer__contacts {
+  background-image: url("../../images/footer/footer-480.png");
+  padding: 84px 31px;
+}
+
+.mark-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 16px;
+}
+
+.footer__link {
+  text-align: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+
+.footer__link > a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #9da4bd;
+}
+
+.footer__link:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.footer__link:last-child {
+  margin-bottom: 44px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.footer__title {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer__text {
+  margin-top: 20px;
+  text-align: start;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+
+.copyright {
+  padding: 44px 31px;
+  background-color: #f7f7f7;
+}
+
+.copyright > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.copyright-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.copyright-list a {
+  display: block;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #303030;
+}
+
+.copyright-list > li {
+  margin-left: 20px;
+}
+
+.copyright-list > li:last-child {
+  margin-left: 40px;
+}
+
+.copyright-span {
+  margin-top: 20px;
+  display: block;
+  text-align: start;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #9da4bd;
+}
 /*# sourceMappingURL=index.css.map */
