--- a/css/index.css
+++ b/css/index.css
@@ -784,7 +784,7 @@ img {
   background-image: linear-gradient(to top, rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../../images/hero/hero-3-480.jpg");
   background-color: rgba(25, 28, 38, 0.2);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   padding: 208px 31px 183px;
 }
 
@@ -945,6 +945,13 @@ img {
   background-color: #f7f7f7;
 }
 
+@media screen and (max-width: 479px) {
+  .statistic__item {
+    width: 135px;
+    height: 133px;
+  }
+}
+
 .statistic__item:nth-child(2n) {
   margin-left: 30px;
   margin-top: 35px;
@@ -960,6 +967,15 @@ img {
   color: #303030;
 }
 
+@media screen and (max-width: 479px) {
+  .number {
+    margin-right: 0px;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 1.6;
+  }
+}
+
 .plus-icon {
   position: relative;
   bottom: 21px;
@@ -971,12 +987,29 @@ img {
   color: #ff6c00;
 }
 
+@media screen and (max-width: 479px) {
+  .plus-icon {
+    bottom: 14px;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.37;
+  }
+}
+
 .caption {
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
   text-align: center;
   color: #303030;
+}
+
+@media screen and (max-width: 479px) {
+  .caption {
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 1.36;
+  }
 }
 
 .masters {
