--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -8,7 +8,7 @@
     url('../../images/hero/hero-3-480.jpg');
   background-color: rgba(25, 28, 38, 0.2);
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   padding: 208px 31px 183px;
 }
 
