--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -5,7 +5,7 @@
       rgba(25, 28, 38, 0.2),
       rgba(25, 28, 38, 0.2)
     ),
-    url('images/hero/hero-3-480.jpg');
+    url('../../images/hero/hero-2-768@2x.jpg');
   background-color: rgba(25, 28, 38, 0.2);
   background-position: center;
   background-size: cover;
