--- a/sass/layots/_footer.scss
+++ b/sass/layots/_footer.scss
@@ -5,7 +5,7 @@
 }
 
 .footer__contacts {
-  background-image: url('../../images/footer/footer-480.png');
+  background-image: url("../../images/footer/footer-480.png");
   padding: 84px 31px;
 }
 
