--- a/css/index.css
+++ b/css/index.css
@@ -1151,7 +1151,7 @@ img {
 }
 
 .footer__contacts {
-  background-image: url("../../images/footer/footer-480.png");
+  background-image: url("../images/footer/footer-480.png");
   padding: 84px 31px;
 }
 
