--- a/sass/layots/_prices.scss
+++ b/sass/layots/_prices.scss
@@ -1,7 +1,7 @@
 .prices {
   background-color: #111319;
   background-repeat: no-repeat;
-  background-image: url('../../images/price/price-480.png');
+  background-image: url('../images/price/price-480.png');
 
   background-position: center;
   background-size: cover;
