--- a/sass/components/_burger-menu.scss
+++ b/sass/components/_burger-menu.scss
@@ -16,6 +16,8 @@
     opacity: 1;
     visibility: visible;
     pointer-events: initial;
+    width: auto;
+    height: auto;
   }
 }
 
@@ -41,6 +43,7 @@
     display: flex;
 
     transform: translateX(0);
+    position: absolute;
   }
 }
 
