--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -10,6 +10,24 @@
   background-position: center;
   background-size: cover;
   padding: 208px 31px 183px;
+
+  @include for-size(tablet) {
+    display: flex;
+    background: none;
+    padding: 0;
+  }
+}
+
+.hero__main-block {
+  @include for-size(tablet) {
+    background-image: linear-gradient(
+        to top,
+        rgba(25, 28, 38, 0.2),
+        rgba(25, 28, 38, 0.2)
+      ),
+      url('../../images/hero/hero-3-768.jpg');
+  }
+  padding: 272px 0px 40px 120px;
 }
 
 .hero__title-block {
@@ -56,4 +74,58 @@
   line-height: 1.62;
   letter-spacing: 0.02em;
   color: $secondary-light-colour;
+}
+
+.hero__sidebar {
+  display: none;
+
+  @include for-size(tablet) {
+    display: flex;
+    position: absolute;
+    background-color: red;
+
+    text-align: center;
+    padding: 37px 370px 38px 40px;
+    transform: rotate(-90deg) translate(-115px, -270px);
+    width: 680px;
+    height: 90px;
+  }
+}
+
+.hero__social-links-list {
+  display: flex;
+}
+
+.hero__social-link > a {
+  @include for-size(tablet) {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 1.36;
+    letter-spacing: 0.2em;
+
+    color: $primary-dark-colour;
+  }
+}
+
+.hero__social-link {
+  @include for-size(tablet) {
+    &:not(:last-child) {
+      margin-right: 40px;
+    }
+  }
+
+  &:hover > a,
+  &:focus > a {
+    color: $accent-colour;
+  }
+}
+
+.hero__social-links--span {
+  width: 60px;
+  height: 1px;
+
+  display: block;
+
+  background: $primary-dark-colour;
+  margin-right: 40px;
 }
